Display no of jobs on site and improved formatting

--- a/searchengine/templates/searchengine/results.html
+++ b/searchengine/templates/searchengine/results.html
@@ -43,19 +43,28 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <!-- First Grid -->
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
-    <div class="w3-twothird">
+    <div>
       <h1>Your search results</h1>
-      <h5 class="w3-padding-8">The average pay for a {{ job_search }} in {{ location_search }} is {{ average_pay }} {{ currency }} a year</h5>
-      <h5 class="w3-padding-8">The most common location is {{ most_frequent_location }}</h5>
-      <p class="w3-text-black">The top 10 companies currently hiring are currently:
-                                {% for company in count_companies %}
-                                    <li> {{company}} </li>
-                                {% endfor %}</p>
-      <p class="w3-text-black">The top 10 skills  are currently:
-                                {% for skill in top_words %}
-                                    <li> {{skill}} </li>
-                                {% endfor %}</p>
-                                
+        <h5 class="w3-padding-8">The average salary range for a {{ job_search }} in {{ location_search }} is {{ average_pay_min }} to {{ average_pay_max }} {{ currency }} a year</h5>
+        <h5 class="w3-padding-8">The most common location is {{ most_frequent_location }}</h5>
+        <div style="display:flex">
+        <p class="w3-text-black">
+        <div>The top 20 companies currently hiring are currently:
+          <table>
+          {% for companies in top_companies %}
+          <tr>
+          <td>{{companies.0}}</td>
+          <td>{{companies.1}}</td>
+          </tr>
+          {% endfor %}
+          </table>
+          </div>
+        <div> The top 20 skills  are currently:
+          {% for skill in top_words %}
+          <li> {{skill}} </li>
+          {% endfor %}</p>
+        </div>
+      </div>                         
     </div>
   </div>
 </div>
