--- a/searchengine/templates/searchengine/results.html
+++ b/searchengine/templates/searchengine/results.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">.
+{% load static %}
+
 <title>JobSearch Analytica</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,81 +13,83 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
+body, html {
+    height: 100%;
+}
+
+/* The hero image */
+.hero-image {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("{% static '/searchengine/pexels-lukas-684387.jpg' %}");
+
+  /* Set a specific height */
+  height: 50%;
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+      }
 </style>
 <body>
 
-{% comment %} <!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-red w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a>
-  </div>
-
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 4</a>
-  </div>
-</div> {% endcomment %}
-
 <!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:96px 16px">
-  <h1 class="w3-margin w3-jumbo">JobSearch Analytica</h1>
-  <p class="w3-xlarge">Informing your career choices</p>
+<header class="w3-container hero-image w3-center"  style="padding:96px 16px">
+  <h1 class="w3-margin w3-jumbo"></h1>
+  <p class="w3-xlarge"></p>
+    <div class="hero-text">
+    <h1>JobSearch Analytica</h1>
+    <p>Informing your career choices</p>
+    </div>
 </header>
 
 <!-- First Grid -->
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div>
-      <h1>Your search results</h1>
+      <h1>Your job analytics calculated from {{ number_of_jobs }} results</h1>
         <h5 class="w3-padding-8">The average salary range for a {{ job_search }} in {{ location_search }} is {{ average_pay_min }} to {{ average_pay_max }} {{ currency }} a year</h5>
         <h5 class="w3-padding-8">The most common location is {{ most_frequent_location }}</h5>
         <div style="display:flex">
         <p class="w3-text-black">
-        <div>The top 20 companies currently hiring are currently:
+        <div class="w3-half">Top companies currently hiring:
           <table>
-          {% for companies in top_companies %}
           <tr>
+          {% for companies in top_companies %}
           <td>{{companies.0}}</td>
           <td>{{companies.1}}</td>
           </tr>
           {% endfor %}
           </table>
           </div>
-        <div> The top 20 skills  are currently:
-          {% for skill in top_words %}
-          <li> {{skill}} </li>
-          {% endfor %}</p>
+        <div class="w3-half">Trending skills:
+          <table>
+          <tr>
+          {% for word in top_words %}
+          <td>{{word.0.0}}</td>
+          <td>{{word.1}}</td>
+          </tr>
+          {% endfor %}
+          </table>
+          </div>
+          </p>
         </div>
       </div>                         
     </div>
   </div>
 </div>
-{% comment %} 
-<!-- Second Grid -->
-<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-third w3-center">
-      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
-    </div>
-
-    <div class="w3-twothird">
-      <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
-
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-  </div>
-</div> {% endcomment %}
 
 <div class="w3-container w3-black w3-center w3-opacity w3-padding-8">
     <h1 class="w3-margin w3-xlarge">Created by JC Studio</h1>
