--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -28,7 +28,7 @@
     <nav id="header" class="fixed w-full z-30 top-0 text-white">
       <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
         <div class="pl-4 flex items-center">
-          <a class="toggleColour text-white no-underline hover:no-underline font-bold text-xl lg:text-4xl" href="#">
+          <a class="toggleColour text-white no-underline hover:no-underline font-bold text-xl lg:text-4xl" href="/home">
             <svg class="h-8 fill-current inline mx-auto" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 512">
 				<g>
 					<g>
@@ -55,11 +55,13 @@
         </div>
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
           <ul class="list-reset lg:flex justify-end flex-1 items-center">
+          <a href="mailto:jarryd.cheso@gmail.com"
           <button
             id="navAction"
             class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             Contact
           </button>
+          </a>
         </div>
       </div>
       <hr class="border-b border-gray-100 opacity-25 my-0 py-0" />
@@ -107,7 +109,7 @@
 
     <section class="bg-white border-b py-20">
 
-	<div class="flex items-center justify-center">
+	<div class="flex justify-center content-center">
 		<div>
 				{% block content %}
 				{% endblock %}
