Corrected formatting of search results

--- a/searchengine/templates/searchengine/index.html
+++ b/searchengine/templates/searchengine/index.html
@@ -36,7 +36,7 @@
       </div>
 
         <button
-          class="px-8 rounded bg-red-500 text-gray-800 font-bold p-4 uppercase border-yellow-500 "
+          class="px-8 rounded bg-blue-500 text-gray-800 font-bold p-4 uppercase border-yellow-500 "
         >
           Search
 
